--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -14,12 +14,12 @@ When creating a new group, you need only add a new line
 #cat Music windows_ext_music_on music_off linux_int_music_on
 
 These line set the currently used settings. This allows them to show up as selected (currently enclosed in [])
-#set Video Software
+#set Video GeForce3
 #set Sound audio_off
 #set Music music_off
-#set Computer P500MHz
-#set Difficulty medium
-#set Experiment linux_safe
+#set Computer P800MHz
+#set Difficulty hard
+#set Experiment windows_safe
 A description for the catagories. This is text that appears in the menu
 #desc Software No Acceleration
 #desc TNT Radeon and TNT
@@ -235,13 +235,13 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 <!-- #easy
 			<var name="mass" value=".4000001"/>
 #end -->
-<!-- #medium -->
+<!-- #medium
 			<var name="mass" value="100.0000001"/>
-<!-- #end -->
-
-<!-- #hard
-			<var name="mass" value="1000.0000001"/>
 #end -->
+
+<!-- #hard -->
+			<var name="mass" value="1000.0000001"/>
+<!-- #end -->
 
 			<var name="radius" value="0000"/>
 			<var name="xscale" value="1"/>
@@ -277,18 +277,18 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="SharedVertexArrays" value="true"/>
 
-<!-- #windows_safe
+<!-- #windows_safe -->
 			<var name="LockVertexArrays" value="true"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="displaylists" value="false"/>
 			<var name="fullscreen" value="true"/>
-#end -->
-<!-- #linux_safe -->
+<!-- #end -->
+<!-- #linux_safe
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="true"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="fullscreen" value="false"/>
-<!-- #end -->
+#end -->
 <!-- #stable
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="false"/>
@@ -304,7 +304,7 @@ You can also specify more than 1 setting for the block. If you do
 "#Software Voodoo", than either one of these will enable the block
 This is done many times later in this config file
 -->
-<!-- #Software -->
+<!-- #Software
 			<var name="fog" value="false"/>
 			<var name="ModelDetail" value=".3"/>
 			<var name="x_resolution" value="512"/>
@@ -319,7 +319,7 @@ This is done many times later in this config file
 			<var name="draw_star_glow" value="false"/>	
 			<var name="high_quality_sprites" value="false"/>
 
-<!-- #end -->
+#end -->
 <!-- #Voodoo
 			<var name="fog" value="false"/>
 			<var name="ModelDetail" value=".4"/>
@@ -336,9 +336,9 @@ This is done many times later in this config file
 			<var name="high_quality_sprites" value="true"/>
 
 #end -->
-<!-- #P800MHz
+<!-- #P800MHz -->
 			<var name="ForceLighting" value="1"/>
-#end -->
+<!-- #end -->
 <!-- #TNT
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="1"/>
@@ -371,7 +371,7 @@ This is done many times later in this config file
 			<var name="draw_star_glow" value="false"/>	
 			<var name="high_quality_sprites" value="false"/>
 #end -->
-<!-- #GeForce3
+<!-- #GeForce3 -->
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="10"/>
 			<var name="x_resolution" value="1240"/>
@@ -384,60 +384,60 @@ This is done many times later in this config file
 			<var name="draw_star_body" value="true"/>
 			<var name="draw_star_glow" value="true"/>	
 			<var name="high_quality_sprites" value="true"/>
-#end -->
+<!-- #end -->
 
 
-<!-- #Software Voodoo TNT GeForce2 -->
+<!-- #Software Voodoo TNT GeForce2
 			<var name="colordepth" value="16"/>
         	       	<var name="zfar" value="60000"/>
-<!-- #end -->
-<!-- #GeForce3
+#end -->
+<!-- #GeForce3 -->
 			<var name="colordepth" value="32"/>
 			<var name="zfar" value="600000"/>
-#end -->
+<!-- #end -->
 
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="4.0"/>
 
 			<var name="use_wireframe" value="0"/>
-<!-- #Software -->
+<!-- #Software
 			<var name="starblend" value="false"/>
-<!-- #end -->
-<!-- #TNT Voodoo GeForce2 GeForce3
+#end -->
+<!-- #TNT Voodoo GeForce2 GeForce3 -->
 			<var name="starblend" value="true"/>
-#end -->
+<!-- #end -->
 
-<!-- #Software -->
+<!-- #Software
 			<var name="background" value="false"/>
-<!-- #end -->
-<!-- #Voodoo TNT GeForce2 GeForce3
+#end -->
+<!-- #Voodoo TNT GeForce2 GeForce3 -->
 			<var name="background" value="true"/>
-#end -->
-<!-- #Software Voodoo TNT GeForce2 -->
-			<var name="cockpit" value="false"/>
 <!-- #end -->
-<!-- #GeForce3
-			<var name="cockpit" value="true"/>
+<!-- #Software Voodoo TNT GeForce2
+			<var name="cockpit" value="false"/>
 #end -->
+<!-- #GeForce3 -->
+			<var name="cockpit" value="true"/>
+<!-- #end -->
 
-<!-- #Software Voodoo -->
+<!-- #Software Voodoo
 			<var name="planet_detail" value="16"/>
 			<var name="jump_detail" value="8"/>
-<!-- #end -->
+#end -->
 <!-- #TNT GeForce2
 			<var name="planet_detail" value="20"/>
 			<var name="jump_detail" value="16"/>
 #end -->
-<!-- #GeForce3
+<!-- #GeForce3 -->
 			<var name="planet_detail" value="32"/>
 			<var name="jump_detail" value="16"/>
-#end -->
+<!-- #end -->
 
-<!-- #Software -->
+<!-- #Software
 			<var name="lightcutoff" value="0.16"/>
 			<var name="lightoptimalintensity" value="0.16"/>
-<!-- #end -->
+#end -->
 <!-- #Voodoo GeForce2
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
@@ -446,18 +446,18 @@ This is done many times later in this config file
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.08"/>
 #end -->
-<!-- #GeForce3
+<!-- #GeForce3 -->
 			<var name="lightcutoff" value="0.04"/>
 			<var name="lightoptimalintensity" value="0.06"/>
-#end -->
+<!-- #end -->
 
 			<var name="lightsaturation" value="0.95"/>
-<!-- #Software Voodoo GeForce2 -->
+<!-- #Software Voodoo GeForce2
 			<var name="separatespecularcolor" value="false"/>
-<!-- #end -->
-<!-- #TNT GeForce3
-			<var name="separatespecularcolor" value="true"/>
 #end -->
+<!-- #TNT GeForce3 -->
+			<var name="separatespecularcolor" value="true"/>
+<!-- #end -->
 			<var name="numlights"	value="4"/>
 			<section name="hud" >
 				<var name="drawAllTargetBoxes" value="false" />
@@ -483,16 +483,16 @@ This is done many times later in this config file
 			<var name="MaxSingleSounds" value="5"/>
 			<var name="MaxTotalSounds" value="16"/>
 #end -->
-<!-- #P500MHz -->
+<!-- #P500MHz
 			<var name="every_other_mount" value="true"/>
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
-<!-- #end -->
-<!-- #P800MHz
+#end -->
+<!-- #P800MHz -->
 			<var name="every_other_mount" value="false"/>
 			<var name="MaxSingleSounds" value="12"/>
 			<var name="MaxTotalSounds" value="32"/>
-#end -->
+<!-- #end -->
 			<var name="frequency" value="22050"/>
 <!-- #audio_on_windows audio_on_linux audio_3d_windows audio_3d_linux
 			<var name="Sound" value="true"/>
@@ -547,14 +547,14 @@ This is done many times later in this config file
 			<var name="simulation_atom" value="0.12"/>
 			<var name="numoldsystems" value="4"/>
 #end -->
-<!-- #P500MHz -->
+<!-- #P500MHz
 			<var name="simulation_atom" value="0.09"/>
 			<var name="numoldsystems" value="8"/>
-<!-- #end -->
-<!-- #P800MHz
+#end -->
+<!-- #P800MHz -->
 			<var name="simulation_atom" value="0.06"/>
 			<var name="numoldsystems" value="20"/>
-#end -->
+<!-- #end -->
 			<var name="garbagecollectfrequency" value="20"/>
 <!-- #windows_safe linux_safe -->
 			<var name="deleteoldsystems" value="true"/>
@@ -585,14 +585,14 @@ This is done many times later in this config file
 			<var name="NumRunningSystems" value="3"/>
 			<var name="InactiveSystemTime" value=".8"/>
 #end -->
-<!-- #P500MHz -->
+<!-- #P500MHz
 			<var name="NumRunningSystems" value="4"/>
 			<var name="InactiveSystemTime" value=".6"/>
-<!-- #end -->
-<!-- #P800MHz
+#end -->
+<!-- #P800MHz -->
 			<var name="NumRunningSystems" value="8"/>
 			<var name="InactiveSystemTime" value=".9"/>
-#end -->
+<!-- #end -->
 <!-- #easy
 			<var name="autodist" value="200"/>
 			<var name="YearScale" value="10"/>
@@ -602,7 +602,7 @@ This is done many times later in this config file
 			<var name="NoFuelAfterburn" value=".1"/>
 			<var name="nebula_shield_recharge" value=".5"/>
 #end -->
-<!-- #medium -->
+<!-- #medium
 			<var name="nebula_shield_recharge" value=".25"/>
 			<var name="autodist" value="500"/>
 			<var name="YearScale" value="2"/>
@@ -610,8 +610,8 @@ This is done many times later in this config file
 			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value="1"/>
 			<var name="NoFuelAfterburn" value=".1"/>
-<!-- #end -->
-<!-- #hard
+#end -->
+<!-- #hard -->
 			<var name="nebula_shield_recharge" value="0"/>
 			<var name="autodist" value="2500"/>
 			<var name="YearScale" value=".3"/>
@@ -619,7 +619,7 @@ This is done many times later in this config file
 			<var name="AfterburnerFuelUsage" value="40"/>
 			<var name="NoFuelThrust" value=".5"/>
 			<var name="NoFuelAfterburn" value="0"/>
-#end -->
+<!-- #end -->
 			<var name="Drone" value="unknown_active"/>
 		</section>
 		<section name="interpreter">
