--- a/vegastrike.config
+++ b/vegastrike.config
@@ -14,12 +14,12 @@ When creating a new group, you need only add a new line
 #cat Music windows_ext_music_on music_off linux_int_music_on
 
 These line set the currently used settings. This allows them to show up as selected (currently enclosed in [])
-#set Video GeForce3
+#set Video TNT
 #set Sound audio_off
 #set Music music_off
-#set Computer P800MHz
-#set Difficulty hard
-#set Experiment windows_safe
+#set Computer P500MHz
+#set Difficulty easy
+#set Experiment linux_safe
 A description for the catagories. This is text that appears in the menu
 #desc Software No Acceleration
 #desc TNT Radeon and TNT
@@ -233,16 +233,16 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="sharedsounds" value="sounds"/>
 		</section>
 		<section name="terrain">
-<!-- #easy
+<!-- #easy -->
 			<var name="mass" value=".4000001"/>
-#end -->
+<!-- #end -->
 <!-- #medium
 			<var name="mass" value="100.0000001"/>
 #end -->
 
-<!-- #hard -->
+<!-- #hard
 			<var name="mass" value="1000.0000001"/>
-<!-- #end -->
+#end -->
 
 			<var name="radius" value="0000"/>
 			<var name="xscale" value="1"/>
@@ -278,18 +278,18 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="SharedVertexArrays" value="true"/>
 
-<!-- #windows_safe -->
+<!-- #windows_safe
 			<var name="LockVertexArrays" value="true"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="displaylists" value="false"/>
 			<var name="fullscreen" value="true"/>
-<!-- #end -->
-<!-- #linux_safe
+#end -->
+<!-- #linux_safe -->
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="true"/>
 			<var name="OptimizeVertexArrays" value="true"/>
 			<var name="fullscreen" value="false"/>
-#end -->
+<!-- #end -->
 <!-- #stable
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="false"/>
@@ -337,10 +337,10 @@ This is done many times later in this config file
 			<var name="high_quality_sprites" value="true"/>
 
 #end -->
-<!-- #P800MHz -->
+<!-- #P800MHz
 			<var name="ForceLighting" value="1"/>
-<!-- #end -->
-<!-- #TNT
+#end -->
+<!-- #TNT -->
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="800"/>
@@ -354,7 +354,7 @@ This is done many times later in this config file
 			<var name="draw_star_body" value="true"/>
 			<var name="draw_star_glow" value="true"/>	
 			<var name="high_quality_sprites" value="false"/>
-#end -->
+<!-- #end -->
 
 
 
@@ -372,7 +372,7 @@ This is done many times later in this config file
 			<var name="draw_star_glow" value="false"/>	
 			<var name="high_quality_sprites" value="false"/>
 #end -->
-<!-- #GeForce3 -->
+<!-- #GeForce3
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="10"/>
 			<var name="x_resolution" value="1240"/>
@@ -385,17 +385,17 @@ This is done many times later in this config file
 			<var name="draw_star_body" value="true"/>
 			<var name="draw_star_glow" value="true"/>	
 			<var name="high_quality_sprites" value="true"/>
-<!-- #end -->
+#end -->
 
 
-<!-- #Software Voodoo TNT GeForce2
+<!-- #Software Voodoo TNT GeForce2 -->
 			<var name="colordepth" value="16"/>
         	       	<var name="zfar" value="60000"/>
-#end -->
-<!-- #GeForce3 -->
+<!-- #end -->
+<!-- #GeForce3
 			<var name="colordepth" value="32"/>
 			<var name="zfar" value="600000"/>
-<!-- #end -->
+#end -->
 
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
@@ -415,25 +415,25 @@ This is done many times later in this config file
 <!-- #Voodoo TNT GeForce2 GeForce3 -->
 			<var name="background" value="true"/>
 <!-- #end -->
-<!-- #Software Voodoo TNT GeForce2
+<!-- #Software Voodoo TNT GeForce2 -->
 			<var name="cockpit" value="false"/>
-#end -->
-<!-- #GeForce3 -->
-			<var name="cockpit" value="true"/>
 <!-- #end -->
+<!-- #GeForce3
+			<var name="cockpit" value="true"/>
+#end -->
 
 <!-- #Software Voodoo
 			<var name="planet_detail" value="16"/>
 			<var name="jump_detail" value="8"/>
 #end -->
-<!-- #TNT GeForce2
+<!-- #TNT GeForce2 -->
 			<var name="planet_detail" value="20"/>
 			<var name="jump_detail" value="16"/>
-#end -->
-<!-- #GeForce3 -->
+<!-- #end -->
+<!-- #GeForce3
 			<var name="planet_detail" value="32"/>
 			<var name="jump_detail" value="16"/>
-<!-- #end -->
+#end -->
 
 <!-- #Software
 			<var name="lightcutoff" value="0.16"/>
@@ -443,14 +443,14 @@ This is done many times later in this config file
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 #end -->
-<!-- #TNT
+<!-- #TNT -->
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.08"/>
-#end -->
-<!-- #GeForce3 -->
+<!-- #end -->
+<!-- #GeForce3
 			<var name="lightcutoff" value="0.04"/>
 			<var name="lightoptimalintensity" value="0.06"/>
-<!-- #end -->
+#end -->
 
 			<var name="lightsaturation" value="0.95"/>
 <!-- #Software Voodoo GeForce2
@@ -484,16 +484,16 @@ This is done many times later in this config file
 			<var name="MaxSingleSounds" value="5"/>
 			<var name="MaxTotalSounds" value="16"/>
 #end -->
-<!-- #P500MHz
+<!-- #P500MHz -->
 			<var name="every_other_mount" value="true"/>
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
-#end -->
-<!-- #P800MHz -->
+<!-- #end -->
+<!-- #P800MHz
 			<var name="every_other_mount" value="false"/>
 			<var name="MaxSingleSounds" value="12"/>
 			<var name="MaxTotalSounds" value="32"/>
-<!-- #end -->
+#end -->
 			<var name="frequency" value="22050"/>
 <!-- #audio_on_windows audio_on_linux audio_3d_windows audio_3d_linux
 			<var name="Sound" value="true"/>
@@ -538,6 +538,8 @@ This is done many times later in this config file
 		<section name="joystick">
 			<var name="deadband" value="0.05"/>
 			<var name="debug_digital_hatswitch" value="false"/>
+			<var name="force_feedback" value="false" />
+			<var name="ff_device" value="0" />
 		</section>
 		<section name="general">
 			<var name="default_mission" value="mission/exploration/explore_universe_nova.mission"/>
@@ -548,14 +550,14 @@ This is done many times later in this config file
 			<var name="simulation_atom" value="0.12"/>
 			<var name="numoldsystems" value="4"/>
 #end -->
-<!-- #P500MHz
+<!-- #P500MHz -->
 			<var name="simulation_atom" value="0.09"/>
 			<var name="numoldsystems" value="8"/>
-#end -->
-<!-- #P800MHz -->
+<!-- #end -->
+<!-- #P800MHz
 			<var name="simulation_atom" value="0.06"/>
 			<var name="numoldsystems" value="20"/>
-<!-- #end -->
+#end -->
 			<var name="garbagecollectfrequency" value="20"/>
 <!-- #windows_safe linux_safe -->
 			<var name="deleteoldsystems" value="true"/>
@@ -586,15 +588,15 @@ This is done many times later in this config file
 			<var name="NumRunningSystems" value="3"/>
 			<var name="InactiveSystemTime" value=".8"/>
 #end -->
-<!-- #P500MHz
+<!-- #P500MHz -->
 			<var name="NumRunningSystems" value="4"/>
 			<var name="InactiveSystemTime" value=".6"/>
-#end -->
-<!-- #P800MHz -->
+<!-- #end -->
+<!-- #P800MHz
 			<var name="NumRunningSystems" value="8"/>
 			<var name="InactiveSystemTime" value=".9"/>
-<!-- #end -->
-<!-- #easy
+#end -->
+<!-- #easy -->
 			<var name="autodist" value="200"/>
 			<var name="YearScale" value="10"/>
 			<var name="AsteroidDifficulty" value=".5"/>
@@ -602,7 +604,7 @@ This is done many times later in this config file
 			<var name="NoFuelThrust" value="1"/>
 			<var name="NoFuelAfterburn" value=".1"/>
 			<var name="nebula_shield_recharge" value=".5"/>
-#end -->
+<!-- #end -->
 <!-- #medium
 			<var name="nebula_shield_recharge" value=".25"/>
 			<var name="autodist" value="500"/>
@@ -612,7 +614,7 @@ This is done many times later in this config file
 			<var name="NoFuelThrust" value="1"/>
 			<var name="NoFuelAfterburn" value=".1"/>
 #end -->
-<!-- #hard -->
+<!-- #hard
 			<var name="nebula_shield_recharge" value="0"/>
 			<var name="autodist" value="2500"/>
 			<var name="YearScale" value=".3"/>
@@ -620,7 +622,7 @@ This is done many times later in this config file
 			<var name="AfterburnerFuelUsage" value="40"/>
 			<var name="NoFuelThrust" value=".5"/>
 			<var name="NoFuelAfterburn" value="0"/>
-<!-- #end -->
+#end -->
 			<var name="Drone" value="unknown_active"/>
 		</section>
 		<section name="interpreter">
