--- a/trunk/data/animations/Makefile.am
+++ b/trunk/data/animations/Makefile.am
@@ -1,5 +1,5 @@
 # Makefile.am for vegastrike/data
-SUBDIRS = explosion_orange.ani explosion_sml_orange.ani locationselect.ani locationselect_up.ani
+SUBDIRS = explosion_orange.ani explosion_sml_orange.ani locationselect.ani locationselect_up.ani static.ani
 pkgdatadir = $(prefix)/games/@PACKAGE@/data/animations
 
 #pkgdata_DATA = $(wildcard *)
