--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -141,7 +141,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
                 <bind key="esc" modifier="none" command="Cockpit::Quit"/>
 
 
-		<bind mouse="0" player="0" button="0" modifier="none" command="FireKey" />
+		<bind mouse="0" player="1" button="0" modifier="none" command="FireKey" />
 		<bind mouse="0" button="1" modifier="none" command="ABKey" />
 		<bind mouse="0" button="2" modifier="none" command="MissileKey" />
 
@@ -556,8 +556,8 @@ This is done many times later in this config file
 			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="joystick">
-			<var name="warp_mouse" value="false"/>
-			<var name="mouse_sensitivity" value="2"/>
+			<var name="warp_mouse" value="true"/>
+			<var name="mouse_sensitivity" value="5"/>
 			<var name="deadband" value="0.05"/>
 			<var name="debug_digital_hatswitch" value="false"/>
 			<var name="force_feedback" value="false" />
