--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -621,7 +621,12 @@ This is done many times later in this config file
 #end -->
 <!-- #easy -->
 			<var name="autodist" value="200"/>
-			<var name="YearScale" value="10"/>
+			<var name="hostile_auto_radius" value="1000"/>
+			<var name="neutral_auto_radius" value="500"/>
+			<var name="friendly_auto_radius" value="100"/>
+			<var name="auto_pilot_termination_distance" value="6000"/>
+			<var name="autotime" value="1"/>
+			<var name="YearScale" value="1"/>
 			<var name="AsteroidDifficulty" value=".5"/>
 			<var name="AfterburnerFuelUsage" value="1"/>
 			<var name="NoFuelThrust" value="1"/>
@@ -629,8 +634,13 @@ This is done many times later in this config file
 			<var name="nebula_shield_recharge" value=".5"/>
 <!-- #end -->
 <!-- #medium
+			<var name="hostile_auto_radius" value="5000"/>
+			<var name="neutral_auto_radius" value="1000"/>
+			<var name="friendly_auto_radius" value="200"/>
+			<var name="auto_pilot_termination_distance" value="8000"/>
 			<var name="nebula_shield_recharge" value=".25"/>
-			<var name="autodist" value="500"/>
+			<var name="autodist" value="1000"/>
+			<var name="autotime" value="2"/>
 			<var name="YearScale" value="2"/>
 			<var name="AsteroidDifficulty" value=".8"/>
 			<var name="AfterburnerFuelUsage" value="10"/>
@@ -638,8 +648,14 @@ This is done many times later in this config file
 			<var name="NoFuelAfterburn" value=".1"/>
 #end -->
 <!-- #hard
+			<var name="hostile_auto_radius" value="8000"/>
+			<var name="neutral_auto_radius" value="1500"/>
+			<var name="friendly_auto_radius" value="1000"/>
+			<var name="auto_pilot_termination_distance" value="7000"/>
+
 			<var name="nebula_shield_recharge" value="0"/>
 			<var name="autodist" value="2500"/>
+			<var name="autotime" value="3"/>
 			<var name="YearScale" value=".3"/>
 			<var name="AsteroidDifficulty" value="1.2"/>
 			<var name="AfterburnerFuelUsage" value="40"/>
